# ComfyUI-ideogram-gguf

./: .gitignore  README.md  __init__.py  dequant.py  editor.md  loader.py  nodes.py  ops.py  pr.md  pyproject.toml  ui.html
fp8/transformer/: config.json  diffusion_pytorch_model.safetensors.index.json
fp8/unconditional_transformer/: config.json
tools/: convert.py
web/docs/: CLIPLoaderGGUF.md  DualCLIPLoaderGGUF.md  QuadrupleCLIPLoaderGGUF.md  TripleCLIPLoaderGGUF.md  UnetLoaderGGUF.md  UnetLoaderGGUFAdvanced.md
